Trying to fix wrong ShoppingCartItem.css styling on Safari (6)

--- a/book-store-frontend/src/components/shopping-cart-item/ShoppingCartItem.css
+++ b/book-store-frontend/src/components/shopping-cart-item/ShoppingCartItem.css
@@ -3,6 +3,9 @@
     border-bottom: 1px solid rgba(0,0,0,0.8);
 }
 
+.shopping-cart-item-book-cover{
+}
+
 .shopping-cart-item-title {
     font-size: 1.2rem;
     font-weight: 500;
